2007-08-30  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* gtk-gui/CBinding.CodeGenerationPanel.cs, gtk-gui/gui.stetic: Still more
	  CodeGenerationPanel UI improving. I think it is now good enough for now.

2007-08-29  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* gtk-gui/CBinding.CodeGenerationPanel.cs, gtk-gui/gui.stetic: Improved UI,
	  could still use more improvement.

2007-08-28  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProjectConfiguration.cs: rewrote naming convetion handling.

2007-08-20  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CompilerPanel.cs, Project/CProjectConfiguration.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs,
	  gtk-gui/CBinding.CompilerPanel.cs, gtk-gui/gui.stetic,
	  Compiler/CCompiler.cs, Compiler/ICompiler.cs, Compiler/GNUCompiler.cs:
	  Added support for ccache.

2007-08-19  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* templates/EmptyCSourceFile.xft.xml, templates/EmptyCppSourceFile.xft.xml,
	  templates/EmptyCHeaderFile.xft.xml,
	  templates/EmptyCppHeaderFile.xft.xml: Fixed some default values.
	* Project/CProject.cs: Fixed a bug where the deploy state of files was not
	  persistent.

2007-08-18  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/ProjectPackageCollection.cs: Added a ToStringArray method to
	  easily get an array of the names of the packages the collection
	  contains.
	* Project/CProject.cs: Fixed up the deployment pkg-config package and
	  improved deployment.
	* Compiler/CCompiler.cs, Compiler/ICompiler.cs, Compiler/GNUCompiler.cs:
	  Added a GenerateDefineFlags method which is used to write the deployed
	  pkg-config package.

2007-08-17  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Fixed a null pointer exception and changed library
	  deployments to ProgramFilesRoot.

2007-08-17  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Enhanced deployment.
